Fix the semantics of passing contentsVisible flag to GraphicsLayers https://bugs.webkit.org/show_bug.cgi?id=76975

Reviewed by Simon Fraser.

Source/WebCore:

This patch is covered by existing tests, in particular
compositing/visibility/layer-visible-content.html; its
expectations are rebaselined.

* rendering/RenderLayerBacking.cpp:
(WebCore::RenderLayerBacking::updateGraphicsLayerGeometry):

LayoutTests:

* compositing/visibility/layer-visible-content-expected.txt: rebaselined expectations.
* compositing/visibility/visibility-image-layers-dynamic-expected.txt: rebaselined expectations.
* platform/chromium/test_expectations.txt: removed the expectation that the test fails on chromium, it should pass now.

Canonical link: https://commits.webkit.org/93909@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@105906 268f45cc-cd09-0410-ab3c-d52691b4dbfc